--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,24 +12,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <header class="container">
       <img class="home" src="https://www.pngkey.com/png/detail/142-1423196_free-logo-maker-camera-eye-logo-png.png" alt="Logo" height="30">
-      <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
+      <h1 class="home pt-1"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
     
       {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
-      <ul class="nav">
+      <ul class="nav pt-3">
       {%- for entry in collections.all | eleventyNavigation %}
         <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
       {%- endfor %}
       </ul>
     </header>
 
-    <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
+    <section class="container">
+      <img src="https://images.unsplash.com/photo-1498588543704-e0d466ddcfe5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="img-fluid h-25" alt="Icy beach with black sand">
+    </section>
+
+    <main {% if templateClass %} class="{{ templateClass }} container"{% endif %}>
 
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+    <footer class="footer my-3">
+      <div class="container">
+        <p class="text-center">&#169 2021 Rob's Blog</p>
+      </div>
+    </footer>
 
     <!-- Current page: {{ page.url | url }} -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
