Added bootstrap styling to contact page

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -26,7 +26,7 @@
     </header>
 
     <section class="container">
-      <img src="https://images.unsplash.com/photo-1498588543704-e0d466ddcfe5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="img-fluid h-25" alt="Icy beach with black sand">
+      <img src="https://images.unsplash.com/photo-1498588543704-e0d466ddcfe5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Icy beach with black sand">
     </section>
 
     <main {% if templateClass %} class="{{ templateClass }} container"{% endif %}>
