--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,8 @@ p:last-child {
 p,
 .tmpl-post li,
 img {
-  max-width: 37.5em; /* 600px /16 */
+  /* max-width: 37.5em; 600px /16 */
+  max-width: 1000px;
 }
 p,
 .tmpl-post li {
