--- a/comments.njk
+++ b/comments.njk
@@ -10,7 +10,7 @@ eleventyNavigation:
 {% for comment in collections.comments | reverse %}
     <div>
         <h4>{{ comment.data.comment }}</h4>
-        <p>Posted by {{ comment.data.author }} on {{ comment.data.date }}</p>
+        <p>Posted by {{ comment.data.author }} on {{ comment.date }}</p>
     </div>
     <hr>
 {% endfor %}
